# pyconza-regbot

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  app.data.json  app.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  genericpath.data.json  genericpath.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.8/pyconza_regbot/: __init__.data.json  __init__.meta.json  app.data.json  app.meta.json
.mypy_cache/3.8/tests/: __init__.data.json  __init__.meta.json  test_pyconza_regbot.data.json  test_pyconza_regbot.meta.json
pyconza_regbot/: bot.py  roles.py
regbot/: __init__.py  __main__.py  commands.py  events.py  google.py  helpers.py  quicket.py  sheets.py  tasks.py  wafer.py  youtube.py
regbot/scripts/: delete_channel_messages.py
tests/: test_pyconza_regbot.py
