[tool.poetry]
name = "pyconza-regbot"
version = "0.1.0"
description = ""
authors = ["Adam Piskorski <adam@piskorski.me>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.4.1"
httpx = "^0.14.3"
gspread-asyncio = "^1.2.0"
ics = "^0.7"
pytz = "^2020.1"
google-api-python-client = "^2.22.0"
google-auth = "^2.2.0"
google-auth-oauthlib = "^0.4.6"
google-auth-httplib2 = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
mypy = "^0.782"
flake8-bugbear = "^20.1.4"
black = "^20.8b1"

[tool.black]
line-length = 90
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
